[SOLVED] about us text align

--- a/style.css
+++ b/style.css
@@ -2341,7 +2341,6 @@ span.c-text {display: inline-block;}
 .about-page-area .about-us > span {
     color: #444444;
     display: block;
-    font-style: italic;
     padding-left: 19px;
     position: relative;
 }
